# bmc_clid

./: CMakeLists.txt  README.md
cmake/: global.cmake
inc/: BmcboxCommandRegister.hpp  Command.hpp  CommandLine.hpp  CommandRegister.hpp  Common.hpp  Generator.hpp  GeneratorRegister.hpp  PluginCommon.hpp  PluginProvider.hpp
src/: Commandline.cpp  PluginProvider.cpp  main.cpp  run.cpp
src/bmcbox/: CMakeLists.txt  bmcbox.cpp
src/commandline/: Command.cpp  CommandLine.cpp
src/generator/: CMakeLists.txt  alert_generator.cpp  command_generator.cpp  data_generator.cpp  test_generator.cpp
src/libs/common/: CMakeLists.txt
src/libs/common/src/: common.cpp
src/plugin/: CMakeLists.txt
src/plugin/i2c/: CMakeLists.txt
src/plugin/i2c/src/: i2c.cpp
src/plugin/test/: CMakeLists.txt
src/plugin/test/src/: test.cpp
src/server/: telnetd.c
